8367475: Incorrect lock usage in LambdaFormInvokers::regenerate_holder_classes

Reviewed-by: dholmes, matsaave, liach